--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         }
 
         .timer {
-        font-size: 50x;
+        font-size: 50px;
         font-weight: bold;
         text-align: center;
         margin-top: 250px;
